# ds-uv-vae

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
notebook/: vae.ipynb
