[project]
name = "ds-uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.5.6",
    "jupyterlab-night>=0.5.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
